--- a/src/app/components/my-orders/my-orders.component.html
+++ b/src/app/components/my-orders/my-orders.component.html
@@ -53,27 +53,36 @@
                         </div>
                     </div>
                     <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of shop.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
+                    <div *ngFor="let orderItem of shop.orderItems">
+                        <div class="card-normal no-decorations" [ngClass]="{'item_due ': orderItem.isDue}">
+                            <div class="row product">
+                                <div class="col-md-12">
+                                    <h4>{{orderItem.name}}</h4>
+                                </div>
+                            </div>
+                            <div class="row product">
+                                <div class="col-md-3">
+                                    <div style="background-image: url('{{imagePath + orderItem.location}}');
                             background-repeat: no-repeat;
                             background-position: center;
                             background-size: cover;
                             width: 100%;height: 100px;">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4">
-                                <h4 class="margin-b-0">{{orderItem.name}}</h4>
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                                <p *ngIf="orderItem.note"><b>Note:</b> {{orderItem.note}}</p>
-                            </div>
-                            <div class="col-md-4">
-                                <b>Order Id:</b> {{orderItem.order_id}}
-                                <br>
-                                <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
+                                <div class="col-md-4">
+                                    <p>Quantity: {{orderItem.quantity}}</p>
+                                    <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
+                                    <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
+                                    <p *ngIf="orderItem.duration" [ngClass]="{'bold ': orderItem.isDue}">
+                                        Due date: {{orderItem.dueDate | date: 'yyyy MMMM dd hh.mm a'}}
+                                    </p>
+                                    <p *ngIf="orderItem.note"><b>Note:</b> {{orderItem.note}}</p>
+                                </div>
+                                <div class="col-md-4">
+                                    <b>Order Id:</b> {{orderItem.order_id}}
+                                    <br>
+                                    <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -89,35 +98,50 @@
                         </div>
                     </div>
                     <br>
-                    <div class="card-normal no-decorations" *ngFor="let orderItem of user.orderItems">
-                        <div class="row product">
-                            <div class="col-md-3">
-                                <div style="background-image: url('{{imagePath + orderItem.location}}');
+                    <div *ngFor="let orderItem of user.orderItems">
+                        <div class="card-normal no-decorations" [ngClass]="{'item_due ': orderItem.isDue}">
+                            <div class="row product">
+                                <div class="col-md-6">
+                                    <h4>{{orderItem.name}}</h4>
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    <button type="button" class="btn btn-default btn-sm">
+                                        Renew order
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row product">
+                                <div class="col-md-3">
+                                    <div style="background-image: url('{{imagePath + orderItem.location}}');
                             background-repeat: no-repeat;
                             background-position: center;
                             background-size: cover;
                             width: 100%;height: 120px;">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4">
-                                <h4 class="margin-b-0">{{orderItem.name}}</h4>
-                                <p>Quantity: {{orderItem.quantity}}</p>
-                                <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
-                                <p class="price">{{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
-                            </div>
-                            <div class="col-md-5">
-                                <b>Order Id:</b> {{orderItem.order_id}}
-                                <br>
-                                <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy/MM/dd hh.mm a' }}
-                                <br>
-                                <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
-                                <p>{{orderItem.address}}</p>
-                                <a href="https://www.google.com/maps/dir/{{orderItem.latitude}},{{orderItem.longitude}}"
-                                    target="_blank">
-                                    <button type="button" class="btn btn-outline-info btn-sm">
-                                        Open item location in Google map
-                                    </button>
-                                </a>
+                                <div class="col-md-4">
+                                    <p>Quantity: {{orderItem.quantity}}</p>
+                                    <p class="price">{{orderItem.quantity * orderItem.price | currency:"Rs. "}}</p>
+                                    <p *ngIf="orderItem.duration">Duration: {{orderItem.duration}} month(s)</p>
+                                    <p *ngIf="orderItem.duration" [ngClass]="{'bold ': orderItem.isDue}">
+                                        Due date: {{orderItem.dueDate | date: 'yyyy MMMM dd hh.mm a'}}
+                                    </p>
+                                    <p *ngIf="orderItem.note"><b>Note:</b> {{orderItem.note}}</p>
+                                </div>
+                                <div class="col-md-5">
+                                    <b>Order Id:</b> {{orderItem.order_id}}
+                                    <br>
+                                    <b>Order date:</b> {{orderItem.order_created_at | date: 'yyyy MMMM dd hh.mm a' }}
+                                    <br>
+                                    <a href="tel:{{orderItem.phone}}">{{orderItem.phone}}</a>
+                                    <p>{{orderItem.address}}</p>
+                                    <a href="https://www.google.com/maps/dir/{{orderItem.latitude}},{{orderItem.longitude}}"
+                                        target="_blank">
+                                        <button type="button" class="btn btn-outline-info btn-sm">
+                                            Open item location in Google map
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
