Set max-height for dropdowns

--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -270,7 +270,7 @@ button.swal2-cancel.swal2-styled:hover {
 }
 
 .search-form .dropdown-menu {
-    height: 400px;
+    max-height: 400px;
     overflow-y: scroll;
 }
 
