--- a/src/app/components/admin/my-orders/my-orders.component.html
+++ b/src/app/components/admin/my-orders/my-orders.component.html
@@ -271,8 +271,7 @@
                 <div class="row" *ngIf="chargeStatus == 'charge'">
                     <div class="col-sm-6">
                         Amount: (Rs.)
-                        <input class="form-control" type="number"
-                            [(ngModel)]="chargedAmount">
+                        <input class="form-control" type="number" [(ngModel)]="chargedAmount">
                     </div>
                 </div>
             </div>
@@ -286,6 +285,65 @@
         <div class="right-side">
             <button type="button" class="btn btn-success btn-link" (click)="markAsReceived()" replaceText="Updating"
                 [spinnerButton]="isMarkAsReceivedProcessing">Received</button>
+        </div>
+    </div>
+</ng-template>
+<ng-template #contentCancel let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title text-center">Cancel order</h5>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-4">
+                <div style="background-image: url('{{imagePath + selectedOrderItem.location}}');
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                            width: 100%;height: 100px;">
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <p class="price">Price: {{selectedOrderItem.price| currency:"Rs. "}}</p>
+                <p class="quantity">Quantity: {{selectedOrderItem.quantity}}</p>
+                <p *ngIf="selectedOrderItem.duration">Duration: {{selectedOrderItem.duration}} month(s)</p>
+                <p [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Order No: {{selectedOrderItem.order_id}}
+                </p>
+                <p [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Order date: {{selectedOrderItem.order_created_at | date: 'yyyy MMMM dd hh.mm a'}}
+                </p>
+                <p *ngIf="selectedOrderItem.duration" [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Due date: {{selectedOrderItem.dueDate | date: 'yyyy MMMM dd hh.mm a'}}
+                </p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="price">
+                    Paid amount: {{(selectedOrderItem.duration ? selectedOrderItem.duration * selectedOrderItem.price :
+                    selectedOrderItem.quantity * selectedOrderItem.price)| currency:"Rs. "}}
+                </p>
+                <p *ngIf="selectedOrderItem.payment_type == 'online'">
+                    <b>
+                        After cancelling the order, it will take 5-10 business days to trasfer the money back to
+                        customer's account.
+                    </b>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <div class="left-side">
+            <button type="button" class="btn btn-default btn-link" (click)="modal.close()">Close</button>
+        </div>
+        <div class="divider"></div>
+        <div class="right-side">
+            <button type="submit" class="btn btn-success btn-link" replaceText="Processing" (click)="cancelOrder()"
+                [spinnerButton]="isProcessing">Cancel order</button>
         </div>
     </div>
 </ng-template>
