--- a/src/app/components/admin/my-orders/my-orders.component.html
+++ b/src/app/components/admin/my-orders/my-orders.component.html
@@ -169,10 +169,15 @@
                                 <!-- collected filter -->
                                 <div class="col-md-2" *ngIf="params.status == 2">
                                     <!-- orderitem db status collected -->
-                                    <button type="button" class="btn btn-default btn-sm" *ngIf="orderItem.status == 2"
+                                    <button type="button" class="btn btn-default btn-sm" *ngIf="orderItem.duration"
                                         style="width: 100%;margin-bottom:2px" #receiveOrderModal
                                         (click)="openOrderItemReceivedModal(contentReceived, orderItem)">
                                         Mark as received
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-sm"
+                                        style="width: 100%;margin-bottom:2px" #refundOrderModal
+                                        (click)="openRefundOrderModal(contentRefund, orderItem)">
+                                        Refund
                                     </button>
                                 </div>
                             </div>
@@ -344,6 +349,84 @@
         <div class="right-side">
             <button type="submit" class="btn btn-success btn-link" replaceText="Processing" (click)="cancelOrder()"
                 [spinnerButton]="isProcessing">Cancel order</button>
+        </div>
+    </div>
+</ng-template>
+
+
+<ng-template #contentRefund let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title text-center">Refund order</h5>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-4">
+                <div style="background-image: url('{{imagePath + selectedOrderItem.location}}');
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                            width: 100%;height: 100px;">
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <p class="price">Price: {{selectedOrderItem.price| currency:"Rs. "}}</p>
+                <p class="quantity">Quantity: {{selectedOrderItem.quantity}}</p>
+                <p *ngIf="selectedOrderItem.duration">Duration: {{selectedOrderItem.duration}} month(s)</p>
+                <p [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Order No: {{selectedOrderItem.order_id}}
+                </p>
+                <p [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Order date: {{selectedOrderItem.order_created_at | date: 'yyyy MMMM dd hh.mm a'}}
+                </p>
+                <p *ngIf="selectedOrderItem.duration" [ngClass]="{'bold':selectedOrderItem.isDue}">
+                    Due date: {{selectedOrderItem.dueDate | date: 'yyyy MMMM dd hh.mm a'}}
+                </p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="price">
+                    Paid amount: {{ selectedOrderItem.total_paid_amount | currency:"Rs. "}}
+                </p>
+                <p *ngIf="selectedOrderItem.online_refunds > 0">
+                    Refunded amount by online: {{ selectedOrderItem.online_refunds | currency:"Rs. "}}
+                </p>
+                <p>
+                    <b>
+                        Refundable amount:
+                        {{ selectedOrderItem.total_paid_amount - selectedOrderItem.online_refunds | currency:"Rs. "}}
+                    </b>
+                </p>
+                <div *ngIf="selectedOrderItem.refundable_amount > 0">
+                    <hr>
+                    <label class="form-label"> Enter amount to refund
+                        <input class="form-control form-input" type="number" [(ngModel)]="refundAmount"
+                            [ngModelOptions]="{standalone: true}">
+                    </label>
+                    <br>
+                    <span class="text-danger form-error" *ngIf="isInvalidRefundAmount">
+                        Refund amount should be less than refundable amount
+                    </span>
+                    <p>
+                        After refunding, it will take 5-10 business days to trasfer the money back to customer's
+                        account.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <div class="left-side">
+            <button type="button" class="btn btn-default btn-link" (click)="modal.close()">Close</button>
+        </div>
+        <div class="divider"></div>
+        <div class="right-side">
+            <button type="submit" class="btn btn-success btn-link" replaceText="Processing" (click)="refundOrder()" [attr.disabled]="true"
+                [spinnerButton]="isRefunding">Refund</button>
         </div>
     </div>
 </ng-template>
